--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <head></head>
 <body>
 <h1>Rùzné poèiny</h1>
-<a href="audopexeso/audopexeso.html">Audiopexeso</a>
+<a href="audiopexeso/audiopexeso.html">Audiopexeso</a>
 </body>
 </html>
