--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+ <meta charset="UTF-8">
+</head>
 <body>
 <h1>Rùzné poèiny</h1>
 <a href="audiopexeso/audiopexeso.html">Audiopexeso</a>
