--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<html>
+ï»¿<html>
 <head>
  <meta charset="UTF-8">
 </head>
 <body>
-<h1>Rùzné poèiny</h1>
+<h1>RÅ¯znÃ© poÄiny</h1>
 <a href="audiopexeso/audiopexeso.html">Audiopexeso</a>
 </body>
 </html>
