--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <h1>Různé počiny</h1>
-<a href="audiopexeso/audiopexeso.html">Audiopexeso</a>
+<a href="audiopexeso/audiopexeso.html">Audiopexeso</a><br/>
+<a href="LandsOfLore/index.html">Lands of Lore</a><br/>
 </body>
 </html>
